add random stuff

--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,16 @@ Learn how to configure a non-root public URL by running `npm run build`.
 <script src="/__/firebase/6.0.2/firebase-auth.js"></script>
 <script src="/__/firebase/6.0.2/firebase-firestore.js"></script>
 <script src="/__/firebase/init.js"></script>
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyC7QbspYTLK1wu2CqH20aC52LznqhFpAXI",
+  authDomain: "environment-241007.firebaseapp.com",
+  databaseURL: "https://environment-241007.firebaseio.com",
+  projectId: "environment-241007",
+  storageBucket: "environment-241007.appspot.com",
+  messagingSenderId: "778022849374",
+  appId: "1:778022849374:web:9efdf80ca3fd885f"
+};
+</script>
 </body>
 </html>
